// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatter basic 1`] = `
"/**
 * This file was auto-generated by openapi-typescript.
 * Do not make direct changes to the file.
 */
export interface paths {}

export interface components {
  schemas: {
    date: Date;
  };
}

export interface operations {}

export interface external {}
"
`;

exports[`formatter hasObject 1`] = `
"/**
 * This file was auto-generated by openapi-typescript.
 * Do not make direct changes to the file.
 */
export interface paths {}

export interface components {
  schemas: {
    calendar: {
      dates?: {
        start?: Date;
      };
    };
  };
}

export interface operations {}

export interface external {}
"
`;
